# jbindgen

./: .gitignore  Cargo.toml  README.md
example/: HelloWorld.java  Makefile
example/mylib/: Cargo.toml
example/mylib/src/: jniffi.rs  jniimpl.rs  lib.rs
jbindgen/: Cargo.toml
jbindgen/src/: main.rs
