[package]
name = "jbindgen"
version = "0.1.0"
authors = ["Jeff Hodges <jmhodges@signal.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.16", features = ["full"] }
anyhow = "1.0.26"
proc-macro2 = "1.0"
bindgen = "0.53.1"
quote = "1.0"
chrono = "0.4"
clap = "2"
